--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   initial:
-#    build: .
+    build: .
     image: registry.cn-beijing.aliyuncs.com/wangdali/spring-initializr
     ports:
       - "8080:8080"
