--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   initializr:
-    build: .
+    build:
+      context: .
     image: docker.io/kuzoncby/spring-initializr:latest
     ports:
       - "8080:8080"
